--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.2.1",
+    "jwt-decode": "^2.2.0",
     "keymirror": "^0.1.1",
+    "raven-js": "^3.13.1",
     "react": "^15.4.2",
+    "react-cookie": "^1.0.5",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
@@ -13,6 +17,7 @@
     "redux-actions": "^2.0.1",
     "redux-api-middleware": "^1.0.2",
     "redux-thunk": "*",
+    "toastr": "^2.1.2",
     "updeep": "^1.0.0"
   },
   "devDependencies": {
